--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -18,17 +18,23 @@
 .nav-back{
   /* background: linear-gradient(#000,#0f0,#000); */
   background: #181818;
+  /* margin-bottom: 0; */
 
 
 }
+/* .nav-mar{
+  margin-bottom: 0;
+} */
 section 
 {
   position: absolute;
-  width: 100vw;
+  /* width: 100vw; */
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  
   gap: 2px;
   flex-wrap: wrap;
   overflow: hidden;
